sass/styles.scss
/* ... */
.section-border {
  border-bottom: 1px solid $keyline-color;
}
.tooltip {
  position: absolute;
  z-index: 1070;
  display: block;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 12px;
  font-weight: normal;
  line-height: 1.4;
  visibility: visible;
  filter: alpha(opacity=0);
  opacity: 0;
}
.tooltip.in {
  filter: alpha(opacity=90);
  opacity: .9;
}
.tooltip.top {
  padding: 5px 0;
  margin-top: -3px;
}
.tooltip.right {
  padding: 0 5px;
  margin-left: 3px;
}
.tooltip.bottom {
  padding: 5px 0;
  margin-top: 3px;
}
.tooltip.left {
  padding: 0 5px;
  margin-left: -3px;
}
.tooltip-inner {
  max-width: 200px;
  padding: 3px 8px;
  color: #fff;
  text-align: center;
  text-decoration: none;
  text-transform: capitalize;
  background-color: #000;
  border-radius: 4px;
}
/* ==========================================================================
Animations
========================================================================== */
.pulse2 {
  animation-name: pulse2;
  animation-duration: 1s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
}
@keyframes pulse2 {
  0% {
    transform: scale(1.1);
  }
  50% {
    transform: scale(0.8);
  }
  100% {
    transform: scale(1);
  }
}
.floating-arrow {
  animation-name: floating-arrow;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
}
@keyframes floating-arrow {
  from {
    transform: translateY(0)
  }
  65% {
    transform: translateY(15px)
  }
  to {
    transform: translateY(0)
  }
}
.floating-logo {
  animation-name: floating-logo;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
}
@keyframes floating-logo {
  from {
    transform: translate(-50%, 0)
  }
  50% {
    transform: translate(-50%, 10px)
  }
  to {
    transform: translate(-50%, 0)
  }
}

/* ==========================================================================
Waypoinsts
========================================================================== */
.wp1, .wp2, .wp3, .wp4, .wp5, .wp6, .wp7, .wp8, .wp9 {
  visibility: hidden
}
.wp8, .wp9 {
  -webkit-animation-delay: 0.3s;
  animation-delay: 0.3s
}
.bounceInLeft, .bounceInRight, .fadeInUp, .fadeInUpDelay, .fadeInDown, .fadeInUpD, .fadeInLeft, .fadeInRight, .bounceInDown {
  visibility: visible
}

/* ==========================================================================
Navigation
========================================================================== */
.header-nav.open {
  visibility: visible;
  opacity: 0.9;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}
.nav-toggle {
  position: absolute;
  top: 0;
  right: 15px;
  z-index: 999999;
  padding: 10px 35px 16px 0;
  cursor: pointer
}
.nav-toggle:focus {
  outline: none
}
.nav-toggle span, .nav-toggle span:before, .nav-toggle span:after {
  content: "";
  position: absolute;
  display: block;
  width: 35px;
  height: 3px;
  -moz-border-radius: 1px;
  -webkit-border-radius: 1px;
  border-radius: 1px;
  background: #fff;
  cursor: pointer
}
.nav-toggle span:before {
  top: -10px
}
.nav-toggle span:after {
  bottom: -10px
}
.nav-toggle span, .nav-toggle span:before, .nav-toggle span:after {
  -moz-transition: all 300ms ease-in-out;
  -o-transition: all 300ms ease-in-out;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out
}
.nav-toggle.active span {
  background-color: transparent
}
.nav-toggle.active span:before, .nav-toggle.active span:after {
  top: 0
}
.nav-toggle.active span:before {
  -moz-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  -o-transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg)
}
.nav-toggle.active span:after {
  top: 10px;
  -moz-transform: translatey(-10px) rotate(-45deg);
  -ms-transform: translatey(-10px) rotate(-45deg);
  -o-transform: translatey(-10px) rotate(-45deg);
  -webkit-transform: translatey(-10px) rotate(-45deg);
  transform: translatey(-10px) rotate(-45deg)
}
.navicon {
  position: absolute;
  height: 26px;
  right: 10px;
  top: 48px;
  visibility: hidden;
  transition: all 300ms ease-in-out;
}

/* ==========================================================================
Hero
========================================================================== */
.hero {
  min-height: 750px;
  background: #111;
  position: relative;
  overflow: visible;

  > .container,
  > .down-arrow {
    position: relative;
    z-index: 2;
  }

  .hero-slideshow {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100%;
    min-height: 750px;
    z-index: 1;
  }

  .hero-slide {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-position: center 25%;
    background-repeat: no-repeat;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    opacity: 0;
    transition: opacity 2600ms ease-in-out;
    will-change: opacity;
  }

  .hero-slide.is-active {
    opacity: 1;
  }

  .hero-rsvp-btn {
    position: absolute;
    left: 50%;
    bottom: 105px;
    transform: translateX(-50%);
    z-index: 3;
  }
  .down-arrow a {
    color: $txt-light;
  }
  h1 {
    color: $txt-light;
    margin-bottom: 40px;
  }
  p.intro {
    color: $txt-light;
    font-size: 20px;
    font-weight: 300;
    margin-bottom: 80px;
  }
  .hero-content {
    padding-top: 40%;
  }
  .hero-content img {
    width: 76%;
    margin-bottom: 12%;
  }
}

.navigation {
  transition: all 300ms ease-in-out;
  position: fixed;
  width: 100%;
  z-index: 10000;
}
.fixed {
  position: fixed;
  background-color: rgba(55, 36, 40, .88);
  z-index: 10000;
  width: 100%;

  header {
    border-bottom: none;
    padding: 35px 0;
  }

  header .member-actions {
    top: 26px;
  }

  header .navicon {
    top: 34px;
  }
}
/* ... */

